# .pi

./: .gitattributes  .gitignore
agent/: AGENTS.md  keybindings.json  model-roles.example.json
agent/extensions/: agent-turn-end-stats.ts  autopilot-mode.ts  better-codex-support.ts  codex-fast-mode.json  copy-all.ts  deepseek-peak-status.ts  diff.ts  edit-last-prompt.ts  everything-search.ts  fast-model.ts  git-status-widget.ts  inline-python-heredoc-highlight.ts  live-prompt-templates.ts  md.ts  move-session.ts  name-auto.ts  read-coverage.ts  selection-editor.ts  simple-scout.ts  simple-scout.ts.disabled  spark-tldr.ts  subagents.ts  titlebar-spinner.ts  tool-token-progress.ts  windows-write-eexist-workaround.ts
agent/extensions/_shared/: conversation-transcript.ts  model-roles.ts
agent/extensions/apply-patch/: index.ts
agent/extensions/apply-patch/rust/: Cargo.toml
agent/extensions/apply-patch/rust/crates/codex-exec-server/: lib.rs
agent/extensions/background-processes/: README.md  formatting.test.ts  formatting.ts  index.ts  manager.test.ts  manager.ts  output-capture.test.ts  output-capture.ts  prompt.test.ts  prompt.ts  result-delivery.test.ts  result-delivery.ts  sanitize.test.ts  sanitize.ts  tail-buffer.test.ts  tail-buffer.ts  test-preload.ts
agent/extensions/chrome-cdp/: README.md  accessibility.test.ts  accessibility.ts  actions.test.ts  diagnostics.test.ts  (+8 more)
agent/prompts/: commit.md  crux.md  grill-me.md  implement-entire-plan.md  review.md
agent/themes/: autopilot-mode-dark.json  autopilot-mode-light.json
powershell/: README.md  pii.ps1
(+75 files in other folders)
